add solution, need testing

--- a/task1/Makefile
+++ b/task1/Makefile
@@ -1,26 +1,35 @@
+# Compiler and flags
 CC := gcc
-CFLAGS := -Wall -Werror -O2
+CFLAGS := -Wall -Werror -O2 -I$(SRC_DIR)/headers
 
+# Directories
 SRC_DIR := src
 BIN_DIR := bin
 
-# Source files and object file paths
+# Source files and corresponding object files
 SOURCES := $(wildcard $(SRC_DIR)/*.c)
-OBJECTS := $(patsubst $(SRC_DIR)/%.c, $(BIN_DIR)/%, $(SOURCES))
+OBJECTS := $(patsubst $(SRC_DIR)/%.c, $(BIN_DIR)/%.o, $(SOURCES))
 
-all: $(BIN_DIR) $(OBJECTS)
+# Default target
+all: $(BIN_DIR) $(BIN_DIR)/main
 
-# Create bin directory
+# Rule to create bin directory
 $(BIN_DIR):
 	@mkdir -p $@
 
-# Compile src files to binary
-$(BIN_DIR)/%: $(SRC_DIR)/%.c
-	@$(CC) $(CFLAGS) $< -o $@
+# Rule to compile each source file to an object file
+$(BIN_DIR)/%.o: $(SRC_DIR)/%.c
+	@echo "Compiling $< to $@"
+	@$(CC) $(CFLAGS) -c $< -o $@
 
-# Clean bin folder 
+# Link object files to create the final executable
+$(BIN_DIR)/main: $(OBJECTS)
+	@echo "Linking $@"
+	@$(CC) $(OBJECTS) -o $@
+
+# Clean target to remove binaries and object files
 clean:
+	@echo "Cleaning up..."
 	@rm -rf $(BIN_DIR)
 
 .PHONY: all clean
-
